# equalish

./: changelog.md  equalish.cabal  versions
src/: Equalish.hs
