name:                equalish

-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.0.0.0
synopsis:            Like Eq, but with explanations when not equal
description:         Like Eq, but with explanations when not equal
cabal-version:       >= 1.10
license:             MIT
license-file:        LICENSE
author:              Martyn J. Pearce
maintainer:          haskell@sixears.com
build-type:          Simple
library
  ghc-options:        -O2 -W -Wall -fhelpful-errors
  exposed-modules:    Equalish
  other-modules:
  default-extensions: NoImplicitPrelude
                    , UnicodeSyntax

  build-depends:      base, base-unicode-symbols

                    , more-unicode >= 0.0.15.0

  hs-source-dirs:      src
  default-language:    Haskell2010

--------------------------------------------------------------------------------
